--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,5 @@
 .RData
 .Ruserdata
 
-brevis_collinoides_groups
-compare_species_ganzle_wittouck.R
-correspondence
-data
-figures_from_other_projects
-letter_salvetti
-manuscript
-parsed
+doc
 results
-my_overview.xlsx
-thoughts.md
